@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_reqtimeout: Prevent long response times from triggering a timeout once
+     the request has been fully read.  PR 59045.  [Yann Ylavic]
+
   *) mod_rewrite: Add QSL|qslast flag to allow rewrites to files with 
      literal question marks in their names. PR 58777. [Eric Covener]
 
